--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,11 +11,15 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
+      href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Source+Code+Pro"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
 
-    <title>React App</title>
+    <title>CtrlAltConnect</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
