--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
 
-    <title>CtrlAltConnect</title>
+    <title>Ctrl+Alt+Connect</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
