--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,8 @@
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
 
+    <script src="https://apis.google.com/js/api.js"></script>
+
     <title>Ctrl+Alt+Connect</title>
   </head>
   <body>
